--- a/shopping.html
+++ b/shopping.html
@@ -19,15 +19,17 @@
 	<div class="bdr-bottom"></div>
 	<div class="lq">
 		<div class="bdr-bottom"></div>
-		<div class="lq_yj"></div>
+		<input class="lq_yj" type="checkbox" id="lq_yj1">
+		<label for="lq_yj1"><span></span></label>
 		<span>包包大人潮流店</span>
 		<span>领券&gt;</span>
 	</div>
 	<div class="bdr-bottom"></div>
 
-	<div class="bbxq">
-		<div class="lq_yj"></div>
 
+	<div class="bbxq">
+		<input class="lq_yj" type="checkbox" id="lq_yj2">
+		<label for="lq_yj2"><span></span></label>
 		<div class="bbxq_img">
 			<img src="img/170720_25f9dhcigekbj4e93ekf5dad3jfaa_180x180.png_200x9999.v1c7E.70.webp">
 		</div>
@@ -45,7 +47,8 @@
 	<div class="kbz"></div>
 	<div class="bdr-bottom"></div>
 	<div class="footer">
-		<div class="lq_yj"></div>
+		<input type="checkbox" class="lq_yj" id="lq_yj">
+		<label for="lq_yj"><span></span></label>
 		<span>全选(0)</span>
 		<span>&yen;0.00</span>
 		<div class="qjs">去结算</div>
